@@ -18,13 +18,20 @@
 
 package org.apache.flink.runtime.scheduler;
 
+import org.apache.flink.api.common.ApplicationID;
 import org.apache.flink.api.common.JobID;
+import org.apache.flink.configuration.JobManagerOptions;
 import org.apache.flink.runtime.executiongraph.ArchivedExecutionGraph;
 import org.apache.flink.runtime.executiongraph.ExecutionGraph;
+import org.apache.flink.runtime.rest.messages.job.rescales.JobRescaleConfigInfo;
+import org.apache.flink.runtime.scheduler.adaptive.timeline.RescalesStatsSnapshot;
 import org.apache.flink.runtime.scheduler.exceptionhistory.RootExceptionHistoryEntry;
 
+import javax.annotation.Nullable;
+
 import java.io.Serializable;
-import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 
 /**
  * {@code ExecutionGraphInfo} serves as a composite class that provides different {@link
@@ -36,22 +43,52 @@ public class ExecutionGraphInfo implements Serializable {
 
     private final ArchivedExecutionGraph executionGraph;
     private final Iterable<RootExceptionHistoryEntry> exceptionHistory;
+    @Nullable private final JobManagerOptions.SchedulerType schedulerType;
+
+    /**
+     * The value is null when the job is not enabled {@link
+     * JobManagerOptions.SchedulerType#Adaptive} scheduler.
+     */
+    @Nullable private final JobRescaleConfigInfo jobRescaleConfigInfo;
+
+    /**
+     * This field is null when the value of {@link
+     * org.apache.flink.configuration.WebOptions#MAX_ADAPTIVE_SCHEDULER_RESCALE_HISTORY_SIZE} is not
+     * a positive number.
+     */
+    @Nullable private final RescalesStatsSnapshot rescalesStatsSnapshot;
 
     public ExecutionGraphInfo(ArchivedExecutionGraph executionGraph) {
         this(
                 executionGraph,
                 executionGraph.getFailureInfo() != null
-                        ? Collections.singleton(
+                        ? List.of(
                                 RootExceptionHistoryEntry.fromGlobalFailure(
                                         executionGraph.getFailureInfo()))
-                        : Collections.emptyList());
+                        : List.of(),
+                null,
+                null,
+                null);
     }
 
     public ExecutionGraphInfo(
             ArchivedExecutionGraph executionGraph,
-            Iterable<RootExceptionHistoryEntry> exceptionHistory) {
+            Iterable<RootExceptionHistoryEntry> exceptionHistory,
+            @Nullable JobManagerOptions.SchedulerType schedulerType) {
+        this(executionGraph, exceptionHistory, schedulerType, null, null);
+    }
+
+    public ExecutionGraphInfo(
+            ArchivedExecutionGraph executionGraph,
+            Iterable<RootExceptionHistoryEntry> exceptionHistory,
+            @Nullable JobManagerOptions.SchedulerType schedulerType,
+            @Nullable JobRescaleConfigInfo jobRescaleConfigInfo,
+            @Nullable RescalesStatsSnapshot rescalesStatsSnapshot) {
         this.executionGraph = executionGraph;
         this.exceptionHistory = exceptionHistory;
+        this.schedulerType = schedulerType;
+        this.jobRescaleConfigInfo = jobRescaleConfigInfo;
+        this.rescalesStatsSnapshot = rescalesStatsSnapshot;
     }
 
     public JobID getJobId() {
@@ -64,5 +101,30 @@ public class ExecutionGraphInfo implements Serializable {
 
     public Iterable<RootExceptionHistoryEntry> getExceptionHistory() {
         return exceptionHistory;
+    }
+
+    @Nullable
+    public JobRescaleConfigInfo getJobRescaleConfigInfo() {
+        return jobRescaleConfigInfo;
+    }
+
+    public Optional<ApplicationID> getApplicationId() {
+        return executionGraph.getApplicationId();
+    }
+
+    /**
+     * Returns the scheduler type of the current execution graph info.
+     *
+     * @return The scheduler type of the current execution graph info. Returns null if exceptions
+     *     occurred.
+     */
+    @Nullable
+    public JobManagerOptions.SchedulerType getSchedulerType() {
+        return schedulerType;
+    }
+
+    @Nullable
+    public RescalesStatsSnapshot getRescalesStatsSnapshot() {
+        return rescalesStatsSnapshot;
     }
 }
