@@ -30,12 +30,17 @@ import org.apache.flink.table.catalog.CatalogMaterializedTable.RefreshStatus;
 import org.apache.flink.table.catalog.CatalogTable;
 import org.apache.flink.table.catalog.CatalogView;
 import org.apache.flink.table.catalog.Column;
+import org.apache.flink.table.catalog.ImmutableColumnsConstraint;
+import org.apache.flink.table.catalog.Interval;
+import org.apache.flink.table.catalog.Interval.TimeUnit;
 import org.apache.flink.table.catalog.IntervalFreshness;
 import org.apache.flink.table.catalog.ObjectIdentifier;
 import org.apache.flink.table.catalog.ResolvedCatalogMaterializedTable;
 import org.apache.flink.table.catalog.ResolvedCatalogTable;
 import org.apache.flink.table.catalog.ResolvedCatalogView;
 import org.apache.flink.table.catalog.ResolvedSchema;
+import org.apache.flink.table.catalog.StartMode;
+import org.apache.flink.table.catalog.StartMode.StartModeKind;
 import org.apache.flink.table.catalog.TableDistribution;
 import org.apache.flink.table.catalog.UniqueConstraint;
 import org.apache.flink.table.expressions.DefaultSqlFactory;
@@ -44,13 +49,15 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.time.Instant;
+import java.time.Period;
+import java.time.ZoneOffset;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.regex.Pattern;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -63,20 +70,37 @@ class ShowCreateUtilTest {
     private static final ObjectIdentifier MATERIALIZED_TABLE_IDENTIFIER =
             ObjectIdentifier.of("catalogName", "dbName", "materializedTableName");
 
+    private static final Pattern START_MODE_EVALUATED_TIMESTAMP =
+            Pattern.compile(
+                    "/\\* Evaluated to FROM_TIMESTAMP\\(TIMESTAMP '[^']*'\\) at execution \\*/");
+
     private static final ResolvedSchema ONE_COLUMN_SCHEMA =
             ResolvedSchema.of(Column.physical("id", DataTypes.INT()));
 
     private static final ResolvedSchema ONE_COLUMN_SCHEMA_WITH_PRIMARY_KEY =
             new ResolvedSchema(
-                    List.of(Column.physical("id", DataTypes.INT())),
+                    List.of(
+                            Column.physical("id", DataTypes.INT()),
+                            Column.metadata("mt_column", DataTypes.STRING(), null, true)),
                     List.of(),
                     UniqueConstraint.primaryKey("pk", List.of("id")),
-                    List.of());
+                    List.of(),
+                    null);
 
     private static final ResolvedSchema TWO_COLUMNS_SCHEMA =
             ResolvedSchema.of(
                     Column.physical("id", DataTypes.INT()),
                     Column.physical("name", DataTypes.STRING()));
+
+    private static final ResolvedSchema TWO_COLUMNS_SCHEMA_WITH_PRIMARY_KEY_AND_IMMUTABLE_COLS =
+            new ResolvedSchema(
+                    List.of(
+                            Column.physical("id", DataTypes.INT()),
+                            Column.physical("name", DataTypes.STRING())),
+                    List.of(),
+                    UniqueConstraint.primaryKey("pk", List.of("id")),
+                    List.of(),
+                    ImmutableColumnsConstraint.immutableColumns("imt", List.of("name")));
 
     @ParameterizedTest(name = "{index}: {2}")
     @MethodSource("argsForShowCreateTable")
@@ -105,12 +129,21 @@ class ShowCreateUtilTest {
     @MethodSource("argsForShowCreateMaterializedTable")
     void showCreateMaterializedTable(
             ResolvedCatalogMaterializedTable materializedTable,
-            boolean isTemporary,
+            boolean createOrAlter,
             String expected) {
         final String createMaterializedTableString =
                 ShowCreateUtil.buildShowCreateMaterializedTableRow(
-                        materializedTable, MATERIALIZED_TABLE_IDENTIFIER, isTemporary);
-        assertThat(createMaterializedTableString).isEqualTo(expected);
+                        materializedTable,
+                        MATERIALIZED_TABLE_IDENTIFIER,
+                        false,
+                        createOrAlter,
+                        ZoneOffset.UTC,
+                        DefaultSqlFactory.INSTANCE);
+        final String fixedTimestamp = "1970-01-02 12:34:56";
+        final String normalizedMTString =
+                setFixedTimestamp(createMaterializedTableString, fixedTimestamp);
+        final String normalizedExpected = setFixedTimestamp(expected, fixedTimestamp);
+        assertThat(normalizedMTString).isEqualTo(normalizedExpected);
     }
 
     @ParameterizedTest(name = "{index}: {1}")
@@ -185,10 +218,10 @@ class ShowCreateUtilTest {
                 argList,
                 createResolvedTable(
                         ONE_COLUMN_SCHEMA,
-                        Collections.emptyMap(),
-                        Collections.emptyList(),
+                        Map.of(),
+                        List.of(),
                         TableDistribution.of(
-                                TableDistribution.Kind.HASH, 2, Arrays.asList("key1", "key2")),
+                                TableDistribution.Kind.HASH, 2, List.of("key1", "key2")),
                         null),
                 "CREATE %sTABLE `catalogName`.`dbName`.`tableName` (\n"
                         + "  `id` INT\n"
@@ -199,13 +232,28 @@ class ShowCreateUtilTest {
                 argList,
                 createResolvedTable(
                         ONE_COLUMN_SCHEMA,
-                        Collections.emptyMap(),
-                        Collections.emptyList(),
-                        TableDistribution.of(
-                                TableDistribution.Kind.RANGE, 2, Arrays.asList("1", "10")),
+                        Map.of(),
+                        List.of(),
+                        TableDistribution.of(TableDistribution.Kind.RANGE, 2, List.of("1", "10")),
                         "Table comment"),
                 "CREATE %sTABLE `catalogName`.`dbName`.`tableName` (\n"
                         + "  `id` INT\n"
+                        + ")\n"
+                        + "COMMENT 'Table comment'\n"
+                        + "DISTRIBUTED BY RANGE(`1`, `10`) INTO 2 BUCKETS\n");
+
+        addTemporaryAndPermanent(
+                argList,
+                createResolvedTable(
+                        TWO_COLUMNS_SCHEMA_WITH_PRIMARY_KEY_AND_IMMUTABLE_COLS,
+                        Map.of(),
+                        List.of(),
+                        TableDistribution.of(TableDistribution.Kind.RANGE, 2, List.of("1", "10")),
+                        "Table comment"),
+                "CREATE %sTABLE `catalogName`.`dbName`.`tableName` (\n"
+                        + "  `id` INT,\n"
+                        + "  `name` VARCHAR(2147483647),\n"
+                        + "  CONSTRAINT `pk` PRIMARY KEY (`id`) NOT ENFORCED\n"
                         + ")\n"
                         + "COMMENT 'Table comment'\n"
                         + "DISTRIBUTED BY RANGE(`1`, `10`) INTO 2 BUCKETS\n");
@@ -218,11 +266,7 @@ class ShowCreateUtilTest {
         addTemporaryAndPermanent(
                 argList,
                 createResolvedTable(
-                        TWO_COLUMNS_SCHEMA,
-                        options,
-                        Collections.emptyList(),
-                        null,
-                        "Another table comment"),
+                        TWO_COLUMNS_SCHEMA, options, List.of(), null, "Another table comment"),
                 "CREATE %sTABLE `catalogName`.`dbName`.`tableName` (\n"
                         + "  `id` INT,\n"
                         + "  `name` VARCHAR(2147483647)\n"
@@ -237,11 +281,7 @@ class ShowCreateUtilTest {
         addTemporaryAndPermanent(
                 argList,
                 createResolvedTable(
-                        ONE_COLUMN_SCHEMA,
-                        Collections.emptyMap(),
-                        Arrays.asList("key1", "key2"),
-                        null,
-                        "comment"),
+                        ONE_COLUMN_SCHEMA, Map.of(), List.of("key1", "key2"), null, "comment"),
                 "CREATE %sTABLE `catalogName`.`dbName`.`tableName` (\n"
                         + "  `id` INT\n"
                         + ")\n"
@@ -253,9 +293,9 @@ class ShowCreateUtilTest {
                 createResolvedTable(
                         TWO_COLUMNS_SCHEMA,
                         options,
-                        Arrays.asList("key1", "key2"),
+                        List.of("key1", "key2"),
                         TableDistribution.of(
-                                TableDistribution.Kind.UNKNOWN, 3, Arrays.asList("1", "2", "3")),
+                                TableDistribution.Kind.UNKNOWN, 3, List.of("1", "2", "3")),
                         "table comment"),
                 "CREATE %sTABLE `catalogName`.`dbName`.`tableName` (\n"
                         + "  `id` INT,\n"
@@ -274,55 +314,123 @@ class ShowCreateUtilTest {
 
     private static Collection<Arguments> argsForShowCreateMaterializedTable() {
         final Collection<Arguments> argList = new ArrayList<>();
-        addTemporaryAndPermanent(
+        addCreateAndCreateOrAlter(
                 argList,
                 createResolvedMaterialized(
                         ONE_COLUMN_SCHEMA,
                         null,
                         List.of(),
                         null,
-                        IntervalFreshness.ofMinute("1"),
+                        StartMode.of(StartModeKind.FROM_NOW, Interval.of(3, TimeUnit.MINUTE)),
+                        IntervalFreshness.ofMinute(1),
                         RefreshMode.CONTINUOUS,
+                        "SELECT 1",
                         "SELECT 1"),
-                "CREATE %sMATERIALIZED TABLE `catalogName`.`dbName`.`materializedTableName`\n"
+                "%sMATERIALIZED TABLE `catalogName`.`dbName`.`materializedTableName` (\n"
+                        + "  `id` INT\n"
+                        + ")\n"
+                        + "START_MODE = FROM_NOW(INTERVAL '3' MINUTE) /* Evaluated to FROM_TIMESTAMP(TIMESTAMP '2020-12-12 23:21:12') at execution */\n"
                         + "FRESHNESS = INTERVAL '1' MINUTE\n"
                         + "REFRESH_MODE = CONTINUOUS\n"
                         + "AS SELECT 1\n");
 
-        addTemporaryAndPermanent(
+        addCreateAndCreateOrAlter(
                 argList,
                 createResolvedMaterialized(
                         ONE_COLUMN_SCHEMA_WITH_PRIMARY_KEY,
                         null,
                         List.of(),
                         null,
-                        IntervalFreshness.ofMinute("1"),
+                        StartMode.of(StartModeKind.FROM_BEGINNING),
+                        IntervalFreshness.ofMinute(1),
                         RefreshMode.CONTINUOUS,
+                        "SELECT 1",
                         "SELECT 1"),
-                "CREATE %sMATERIALIZED TABLE `catalogName`.`dbName`.`materializedTableName` (\n"
+                "%sMATERIALIZED TABLE `catalogName`.`dbName`.`materializedTableName` (\n"
+                        + "  `id` INT,\n"
+                        + "  `mt_column` VARCHAR(2147483647) METADATA VIRTUAL,\n"
                         + "  CONSTRAINT `pk` PRIMARY KEY (`id`) NOT ENFORCED\n"
                         + ")\n"
+                        + "START_MODE = FROM_BEGINNING\n"
                         + "FRESHNESS = INTERVAL '1' MINUTE\n"
                         + "REFRESH_MODE = CONTINUOUS\n"
                         + "AS SELECT 1\n");
 
-        addTemporaryAndPermanent(
+        addCreateAndCreateOrAlter(
+                argList,
+                createResolvedMaterialized(
+                        TWO_COLUMNS_SCHEMA_WITH_PRIMARY_KEY_AND_IMMUTABLE_COLS,
+                        null,
+                        List.of(),
+                        null,
+                        StartMode.of(
+                                StartModeKind.FROM_TIMESTAMP, Instant.ofEpochSecond(1740000000)),
+                        IntervalFreshness.ofMinute(1),
+                        RefreshMode.CONTINUOUS,
+                        "SELECT 1",
+                        "SELECT 1"),
+                "%sMATERIALIZED TABLE `catalogName`.`dbName`.`materializedTableName` (\n"
+                        + "  `id` INT,\n"
+                        + "  `name` VARCHAR(2147483647),\n"
+                        + "  CONSTRAINT `pk` PRIMARY KEY (`id`) NOT ENFORCED\n"
+                        + ")\n"
+                        + "START_MODE = FROM_TIMESTAMP(TIMESTAMP '2025-02-19 21:20:00')\n"
+                        + "FRESHNESS = INTERVAL '1' MINUTE\n"
+                        + "REFRESH_MODE = CONTINUOUS\n"
+                        + "AS SELECT 1\n");
+
+        addCreateAndCreateOrAlter(
                 argList,
                 createResolvedMaterialized(
                         TWO_COLUMNS_SCHEMA,
                         "Materialized table comment",
                         List.of("id"),
                         TableDistribution.of(TableDistribution.Kind.HASH, 5, List.of("id")),
-                        IntervalFreshness.ofMinute("3"),
+                        StartMode.of(
+                                StartModeKind.FROM_TIMESTAMP,
+                                Instant.ofEpochSecond(1740000000),
+                                true),
+                        IntervalFreshness.ofMinute(3),
                         RefreshMode.FULL,
-                        "SELECT id, name FROM tbl_a"),
-                "CREATE %sMATERIALIZED TABLE `catalogName`.`dbName`.`materializedTableName`\n"
+                        "SELECT id, name FROM tbl_a",
+                        "SELECT id, name FROM `catalogName`.`dbName`.`tbl_a`"),
+                "%sMATERIALIZED TABLE `catalogName`.`dbName`.`materializedTableName` (\n"
+                        + "  `id` INT,\n"
+                        + "  `name` VARCHAR(2147483647)\n"
+                        + ")\n"
                         + "COMMENT 'Materialized table comment'\n"
                         + "DISTRIBUTED BY HASH(`id`) INTO 5 BUCKETS\n"
                         + "PARTITIONED BY (`id`)\n"
+                        + "START_MODE = FROM_TIMESTAMP(TIMESTAMP WITH LOCAL TIME ZONE '2025-02-19 21:20:00')\n"
                         + "FRESHNESS = INTERVAL '3' MINUTE\n"
                         + "REFRESH_MODE = FULL\n"
-                        + "AS SELECT id, name FROM tbl_a\n");
+                        + "AS SELECT id, name FROM `catalogName`.`dbName`.`tbl_a`\n");
+
+        addCreateAndCreateOrAlter(
+                argList,
+                createResolvedMaterialized(
+                        TWO_COLUMNS_SCHEMA,
+                        "Materialized table comment",
+                        List.of("id"),
+                        TableDistribution.of(TableDistribution.Kind.HASH, 5, List.of("id")),
+                        StartMode.of(
+                                StartModeKind.FROM_NOW,
+                                Interval.of(Period.of(0, 1, 2), TimeUnit.MONTH)),
+                        IntervalFreshness.ofMinute(3),
+                        RefreshMode.FULL,
+                        "SELECT * FROM tbl_a",
+                        "SELECT id, name FROM `catalogName`.`dbName`.`tbl_a`"),
+                "%sMATERIALIZED TABLE `catalogName`.`dbName`.`materializedTableName` (\n"
+                        + "  `id` INT,\n"
+                        + "  `name` VARCHAR(2147483647)\n"
+                        + ")\n"
+                        + "COMMENT 'Materialized table comment'\n"
+                        + "DISTRIBUTED BY HASH(`id`) INTO 5 BUCKETS\n"
+                        + "PARTITIONED BY (`id`)\n"
+                        + "START_MODE = FROM_NOW(INTERVAL '1' MONTH) /* Evaluated to FROM_TIMESTAMP(TIMESTAMP '1970-01-02 12:34:56') at execution */\n"
+                        + "FRESHNESS = INTERVAL '3' MINUTE\n"
+                        + "REFRESH_MODE = FULL\n"
+                        + "AS SELECT id, name FROM `catalogName`.`dbName`.`tbl_a`\n");
 
         return argList;
     }
@@ -331,6 +439,12 @@ class ShowCreateUtilTest {
             Collection<Arguments> argList, CatalogBaseTable catalogBaseTable, String sql) {
         argList.add(Arguments.of(catalogBaseTable, false, String.format(sql, "")));
         argList.add(Arguments.of(catalogBaseTable, true, String.format(sql, "TEMPORARY ")));
+    }
+
+    private static void addCreateAndCreateOrAlter(
+            Collection<Arguments> argList, CatalogBaseTable catalogBaseTable, String sql) {
+        argList.add(Arguments.of(catalogBaseTable, false, String.format(sql, "CREATE ")));
+        argList.add(Arguments.of(catalogBaseTable, true, String.format(sql, "CREATE OR ALTER ")));
     }
 
     private static ResolvedCatalogTable createResolvedTable(
@@ -362,7 +476,7 @@ class ShowCreateUtilTest {
                         comment,
                         originalQuery,
                         expandedQuery,
-                        Collections.emptyMap()),
+                        Map.of()),
                 resolvedSchema);
     }
 
@@ -371,9 +485,11 @@ class ShowCreateUtilTest {
             String comment,
             List<String> partitionBy,
             TableDistribution distribution,
+            StartMode startMode,
             IntervalFreshness freshness,
             RefreshMode refreshMode,
-            String definitionQuery) {
+            String originalQuery,
+            String expandedQuery) {
         return new ResolvedCatalogMaterializedTable(
                 CatalogMaterializedTable.newBuilder()
                         .comment(comment)
@@ -382,12 +498,23 @@ class ShowCreateUtilTest {
                         .schema(Schema.newBuilder().fromResolvedSchema(resolvedSchema).build())
                         .freshness(freshness)
                         .refreshMode(refreshMode)
-                        .definitionQuery(definitionQuery)
+                        .originalQuery(originalQuery)
+                        .expandedQuery(expandedQuery)
                         .logicalRefreshMode(LogicalRefreshMode.AUTOMATIC)
                         .refreshStatus(RefreshStatus.ACTIVATED)
                         .build(),
                 resolvedSchema,
                 refreshMode,
-                freshness);
+                freshness,
+                startMode);
+    }
+
+    private static String setFixedTimestamp(String sql, String fixedTimestamp) {
+        return START_MODE_EVALUATED_TIMESTAMP
+                .matcher(sql)
+                .replaceAll(
+                        "/* Evaluated to FROM_TIMESTAMP(TIMESTAMP '"
+                                + fixedTimestamp
+                                + "') at execution */");
     }
 }
