@@ -25,7 +25,6 @@ import org.apache.flink.util.Preconditions;
 import javax.annotation.Nullable;
 
 import java.time.Duration;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -107,6 +106,21 @@ public interface CatalogMaterializedTable extends CatalogBaseTable {
     Optional<Long> getSnapshot();
 
     /**
+     * Original text of the materialized table definition that preserves the original formatting.
+     *
+     * @return the original string literal provided by the user.
+     */
+    String getOriginalQuery();
+
+    /**
+     * Expanded text of the original materialized table definition with resolved identifiers. This
+     * is needed because context such as current DB is lost after the session.
+     *
+     * @return the materialized table definition in expanded text.
+     */
+    String getExpandedQuery();
+
+    /**
      * The definition query text of materialized table, text is expanded in contrast to the original
      * SQL. This is needed because the context such as current DB is lost after the session, in
      * which view is defined, is gone. Expanded query text takes care of this, as an example.
@@ -117,8 +131,13 @@ public interface CatalogMaterializedTable extends CatalogBaseTable {
      * database "default" and has two columns ("name" and "value").
      *
      * @return the materialized table definition in expanded text.
+     * @deprecated The definition query will be removed in future versions, please use {@link
+     *     #getExpandedQuery()} instead.
      */
-    String getDefinitionQuery();
+    @Deprecated
+    default String getDefinitionQuery() {
+        return getExpandedQuery();
+    }
 
     /**
      * Get the definition freshness of materialized table which is used to determine the physical
@@ -153,12 +172,29 @@ public interface CatalogMaterializedTable extends CatalogBaseTable {
     /** Return summary description of refresh handler. */
     Optional<String> getRefreshHandlerDescription();
 
+    /** Get the start mode of materialized table. */
+    default Optional<StartMode> getStartMode() {
+        return Optional.empty();
+    }
+
     /**
      * Return the serialized refresh handler of materialized table. This will not be used for
      * describe table.
      */
     @Nullable
     byte[] getSerializedRefreshHandler();
+
+    /** Convert this object to a {@link CatalogTable} object for planner optimize query. */
+    default CatalogTable toCatalogTable() {
+        return CatalogTable.newBuilder()
+                .schema(getUnresolvedSchema())
+                .comment(getComment())
+                .distribution(getDistribution().orElse(null))
+                .partitionKeys(getPartitionKeys())
+                .options(getOptions())
+                .snapshot(getSnapshot().orElse(null))
+                .build();
+    }
 
     /** The logical refresh mode of materialized table. */
     @PublicEvolving
@@ -206,16 +242,18 @@ public interface CatalogMaterializedTable extends CatalogBaseTable {
         private Schema schema;
         private String comment;
         private TableDistribution distribution = null;
-        private List<String> partitionKeys = Collections.emptyList();
-        private Map<String, String> options = Collections.emptyMap();
+        private List<String> partitionKeys = List.of();
+        private Map<String, String> options = Map.of();
         private @Nullable Long snapshot;
-        private String definitionQuery;
+        private String originalQuery;
+        private String expandedQuery;
         private @Nullable IntervalFreshness freshness;
         private LogicalRefreshMode logicalRefreshMode;
         private @Nullable RefreshMode refreshMode;
         private RefreshStatus refreshStatus;
         private @Nullable String refreshHandlerDescription;
         private @Nullable byte[] serializedRefreshHandler;
+        private StartMode startMode;
 
         private Builder() {}
 
@@ -245,11 +283,24 @@ public interface CatalogMaterializedTable extends CatalogBaseTable {
             return this;
         }
 
-        public Builder definitionQuery(String definitionQuery) {
-            this.definitionQuery =
-                    Preconditions.checkNotNull(
-                            definitionQuery, "Definition query must not be null.");
+        public Builder originalQuery(String originalQuery) {
+            this.originalQuery =
+                    Preconditions.checkNotNull(originalQuery, "Original query must not be null.");
             return this;
+        }
+
+        public Builder expandedQuery(String expandedQuery) {
+            this.expandedQuery =
+                    Preconditions.checkNotNull(expandedQuery, "Expanded query must not be null.");
+            return this;
+        }
+
+        /**
+         * @deprecated Use {@link #expandedQuery(String)} instead.
+         */
+        @Deprecated
+        public Builder definitionQuery(String definitionQuery) {
+            return expandedQuery(definitionQuery);
         }
 
         public Builder freshness(@Nullable IntervalFreshness freshness) {
@@ -290,6 +341,11 @@ public interface CatalogMaterializedTable extends CatalogBaseTable {
             return this;
         }
 
+        public Builder startMode(StartMode startMode) {
+            this.startMode = startMode;
+            return this;
+        }
+
         public CatalogMaterializedTable build() {
             return new DefaultCatalogMaterializedTable(
                     schema,
@@ -298,13 +354,15 @@ public interface CatalogMaterializedTable extends CatalogBaseTable {
                     partitionKeys,
                     options,
                     snapshot,
-                    definitionQuery,
+                    originalQuery,
+                    expandedQuery,
                     freshness,
                     logicalRefreshMode,
                     refreshMode,
                     refreshStatus,
                     refreshHandlerDescription,
-                    serializedRefreshHandler);
+                    serializedRefreshHandler,
+                    startMode);
         }
     }
 }
